[package]
name = "snesdev"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"
target = "wc65c816"

[features]
volatile=[]
variables=["volatile"]
faults=[]
dma=["volatile","pointer"]
ptreg=["volatile"]
pointer=[]
memctl=["pointer"]
default=["volatile","variables","faults"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
