[package]
name = "w65-abi-extra"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.7", optional=true}

[features]
f16 = [] # Enable f16 support even if it's unsupported
f128 = [] # Enable f128 support
default = ["bytemuck"]
__ra_test_feature_do_no_use = []